    - one bug preventing a proper redraw of defragmented files was fixed
    - the documentation was updated to include better information about
      taking screen-shots and creating support packages on the bug reports page
    - tree-view to select chapters was added to documentation and the
      default doxygen color theme is now used
    
    - the following translations were updated:
    
      Korean, Turkish, Slovak
      
    beta2:
    - UD_LOG_FILE_PATH environment variable added to force save of debugging
      information to a log file. Intended for use in boot time interface
      and batch scripts.
      For the GUI a setting was introduced, which is equivalent to setting
      this variable.
    - boot time interface startup logging added; the program saves log files
      in %windir%\UltraDefrag\logs folder
    - a bug preventing the boot time defragmenter from being turned off fixed

    - the following translations were added:

      Indonesian

    - the following translations were updated:

      Spanish(ES), Czech, Belarusian, Ukrainian, Chinese(Traditional)

    - Developers: winx_strdup, winx_vsprintf, winx_sprintf, winx_enable_dbg_log,
      winx_disable_dbg_log, winx_get_module_filename, winx_path_remove_filename,
      winx_path_remove_extension, winx_path_extract_filename, winx_create_path,
      winx_init_spin_lock, winx_acquire_spin_lock, winx_release_spin_lock,
      winx_destroy_spin_lock functions added to zenwinx library
    - udefrag_set_log_file_path function added to udefrag library

    beta1:
    - defragmentation algorithm reimplemented; partial defragmentation improved
    - ability to defragment MFT as well as other internal NTFS files
      on Windows XP and Windows Server 2003 was added
    - ability to defragment internal NTFS files on Windows 2000 was added
    - one huge bug was fixed in the boot time defragmenter, udefrag.dll and
      zenwinx.dll libraries - they all have had improper definition of the