@@ -33,6 +33,7 @@
 char *cluster_map = NULL;
 
 WORD colors[NUM_OF_SPACE_STATES] = {
+	0,
 	FOREGROUND_RED | FOREGROUND_GREEN | FOREGROUND_BLUE | FOREGROUND_INTENSITY,
 	FOREGROUND_GREEN | FOREGROUND_INTENSITY,
 	FOREGROUND_GREEN,
