@@ -48,6 +48,7 @@ int grid_color_b = 0;
 
 COLORREF colors[NUM_OF_SPACE_STATES] = 
 {
+	RGB(102,102,102),               /* unused map block */
 	RGB(255,255,255),               /* free */
 	/*RGB(0,180,60),RGB(0,90,30),*/ /* dark green is too dark here... */
 	RGB(0,215,32),RGB(4,164,0),     /* system */
